force-app/main/default/objects/Customer_Form__c/Customer_Form__c.object-meta.xml
<CustomObject>
    <label>Customer Form</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Inquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>