force-app/main/default/objects/Customer_Form__c/fields/Any_other_colors__c.field-meta.xml
<CustomField>
    <fullName>Any_other_colors__c</fullName>
    <label>Any other colors</label>
    <length>80</length>
    <type>Text</type>
</CustomField>