force-app/main/default/objects/Customer_Form__c/fields/As_per_the_BOQ__c.field-meta.xml
<CustomField>
    <fullName>As_per_the_BOQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>As per the BOQ</label>
    <type>Checkbox</type>
</CustomField>