force-app/main/default/objects/Customer_Form__c/fields/As_per_the_Sample__c.field-meta.xml
<CustomField>
    <fullName>As_per_the_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>As per the Sample</label>
    <type>Checkbox</type>
</CustomField>