force-app/main/default/objects/Customer_Form__c/fields/BPR__c.field-meta.xml
<CustomField>
    <fullName>BPR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPR</label>
    <referenceTo>Customer_Form__c</referenceTo>
    <relationshipLabel>Customer Forms</relationshipLabel>
    <relationshipName>Customer_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>