force-app/main/default/objects/Customer_Form__c/fields/Brackets_QTY__c.field-meta.xml
<CustomField>
    <fullName>Brackets_QTY__c</fullName>
    <label>Brackets QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>