force-app/main/default/objects/Customer_Form__c/fields/Coating_type__c.field-meta.xml
<CustomField>
    <fullName>Coating_type__c</fullName>
    <label>Coating type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Power Coated</fullName>
            </value>
            <value>
                <fullName>Spray paint</fullName>
            </value>
            <value>
                <fullName>Primerpowder coated</fullName>
            </value>
            <value>
                <fullName>HDG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>