force-app/main/default/objects/Customer_Form__c/fields/Coller_type__c.field-meta.xml
<CustomField>
    <fullName>Coller_type__c</fullName>
    <label>Coller type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flush</fullName>
            </value>
            <value>
                <fullName>Sunk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>