force-app/main/default/objects/Customer_Form__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Forms</relationshipLabel>
    <relationshipName>Customer_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>