force-app/main/default/objects/Customer_Form__c/fields/Contact_Telephone_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_Telephone_No__c</fullName>
    <label>Contact Telephone No</label>
    <type>Phone</type>
</CustomField>