force-app/main/default/objects/Customer_Form__c/fields/Cover_Plate__c.field-meta.xml
<CustomField>
    <fullName>Cover_Plate__c</fullName>
    <label>Cover Plate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>