force-app/main/default/objects/Customer_Form__c/fields/Cover_plates__c.field-meta.xml
<CustomField>
    <fullName>Cover_plates__c</fullName>
    <label>Cover plates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>