force-app/main/default/objects/Customer_Form__c/fields/Customer_Calling_Language__c.field-meta.xml
<CustomField>
    <fullName>Customer_Calling_Language__c</fullName>
    <label>Customer Calling Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sinhala</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>