force-app/main/default/objects/Customer_Form__c/fields/Date_Of_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Inquiry__c</fullName>
    <label>Date Of Inquiry</label>
    <type>Date</type>
</CustomField>