force-app/main/default/objects/Customer_Form__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <label>Dimension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>