force-app/main/default/objects/Customer_Form__c/fields/Embossed_slotted__c.field-meta.xml
<CustomField>
    <fullName>Embossed_slotted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embossed slotted</label>
    <type>Checkbox</type>
</CustomField>