force-app/main/default/objects/Customer_Form__c/fields/Embossed_slotted_QTY__c.field-meta.xml
<CustomField>
    <fullName>Embossed_slotted_QTY__c</fullName>
    <label>Embossed slotted QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>