force-app/main/default/objects/Customer_Form__c/fields/End_caps__c.field-meta.xml
<CustomField>
    <fullName>End_caps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End caps</label>
    <type>Checkbox</type>
</CustomField>