force-app/main/default/objects/Customer_Form__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss</fullName>
            </value>
            <value>
                <fullName>Texture</fullName>
            </value>
            <value>
                <fullName>Sand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>