force-app/main/default/objects/Customer_Form__c/fields/General__c.field-meta.xml
<CustomField>
    <fullName>General__c</fullName>
    <label>General</label>
    <length>80</length>
    <type>Text</type>
</CustomField>