force-app/main/default/objects/Customer_Form__c/fields/Hot_Dipped_Galvernizing__c.field-meta.xml
<CustomField>
    <fullName>Hot_Dipped_Galvernizing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Dipped Galvernizing</label>
    <type>Checkbox</type>
</CustomField>