force-app/main/default/objects/Customer_Form__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Customer Forms</relationshipLabel>
    <relationshipName>Customer_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>