force-app/main/default/objects/Customer_Form__c/fields/Joint_pieces_In_side_fixing__c.field-meta.xml
<CustomField>
    <fullName>Joint_pieces_In_side_fixing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint pieces (In side fixing)</label>
    <type>Checkbox</type>
</CustomField>