force-app/main/default/objects/Customer_Form__c/fields/Lead_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_By__c</fullName>
    <label>Lead By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>