force-app/main/default/objects/Customer_Form__c/fields/Lids__c.field-meta.xml
<CustomField>
    <fullName>Lids__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lids</label>
    <type>Checkbox</type>
</CustomField>