force-app/main/default/objects/Customer_Form__c/fields/Mounting_Method__c.field-meta.xml
<CustomField>
    <fullName>Mounting_Method__c</fullName>
    <label>Mounting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surface</fullName>
            </value>
            <value>
                <fullName>Sunk</fullName>
            </value>
            <value>
                <fullName>Free Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>