force-app/main/default/objects/Customer_Form__c/fields/Primer_coated__c.field-meta.xml
<CustomField>
    <fullName>Primer_coated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primer coated</label>
    <type>Checkbox</type>
</CustomField>