force-app/main/default/objects/Customer_Form__c/fields/RAL__c.field-meta.xml
<CustomField>
    <fullName>RAL__c</fullName>
    <label>RAL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>