force-app/main/default/objects/Customer_Form__c/fields/Require_Date__c.field-meta.xml
<CustomField>
    <fullName>Require_Date__c</fullName>
    <label>Require Date</label>
    <type>Date</type>
</CustomField>