force-app/main/default/objects/Customer_Form__c/fields/Slotted_only__c.field-meta.xml
<CustomField>
    <fullName>Slotted_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slotted only</label>
    <type>Checkbox</type>
</CustomField>