force-app/main/default/objects/Customer_Form__c/fields/WIDTH__c.field-meta.xml
<CustomField>
    <fullName>WIDTH__c</fullName>
    <label>WIDTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>