force-app/main/default/objects/Customer_Form__c/fields/ZA_GI_with_Out_P_Coa__c.field-meta.xml
<CustomField>
    <fullName>ZA_GI_with_Out_P_Coa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZA/GI with Out P.Coa</label>
    <type>Checkbox</type>
</CustomField>