force-app/main/default/objects/Customer_Form__c/recordTypes/CIF.recordType-meta.xml
<RecordType>
    <fullName>CIF</fullName>
    <active>true</active>
    <label>CIF - Trunking and Tray</label>
</RecordType>