force-app/main/default/objects/Customer_Form__c/recordTypes/CIF_Wired_Non_Wired.recordType-meta.xml
<RecordType>
    <fullName>CIF_Wired_Non_Wired</fullName>
    <active>true</active>
    <label>CIF - Wired &amp; Non Wired</label>
</RecordType>