force-app/main/default/objects/Customer_Form__c/recordTypes/Repeater_Form_Request.recordType-meta.xml
<RecordType>
    <fullName>Repeater_Form_Request</fullName>
    <active>true</active>
    <label>Repeater Form Request</label>
</RecordType>